<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_avatar"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_avatar_detail"
        app:civ_border_color="#FF909090"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_avatar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/username"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ket_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/detail_followers"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@id/detail_followers"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/repository"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_username"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/detail_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/detail_followers"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@id/detail_followers"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="@id/ket_repository"
        app:layout_constraintStart_toStartOf="@id/ket_repository"
        app:layout_constraintTop_toBottomOf="@id/ket_repository"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ket_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/followers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_username"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="@id/ket_followers"
        app:layout_constraintStart_toStartOf="@id/ket_followers"
        app:layout_constraintTop_toBottomOf="@id/ket_followers"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ket_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/detail_followers"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/detail_followers"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/following"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ket_followers"
        app:layout_constraintTop_toBottomOf="@id/detail_username"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/detail_followers"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/detail_followers"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="@id/ket_following"
        app:layout_constraintStart_toStartOf="@id/ket_following"
        app:layout_constraintTop_toBottomOf="@id/ket_following"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/detail_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_followers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_followers"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_company"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_company"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_unfavorite"
        app:layout_constraintBottom_toTopOf="@id/tl_material"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/desc_icon_fav" />

    <ProgressBar
        android:id="@+id/pb_detail"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_location"
        app:tabSelectedTextColor="@android:color/black"
        app:tabTextColor="@android:color/darker_gray" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_material" />

</androidx.constraintlayout.widget.ConstraintLayout>